# sharkstore-1

console/controllers/: cluster_controller.go  metadata_controller.go  node_controller.go
console/models/: cluster_info.go  table_info.go
console/routers/: router.go
console/service/: service.go
console/static/js/cluster/: initcluster.js  loadInfoData.js
console/static/js/createtables/: createtable.js  (+1 more)
console/views/: cluster_init.html  metadata_createtable.html  range_unhealthy.html  tables_tablelist.html
data-server/: CMakeLists.txt
data-server/src/common/: ds_config.c
data-server/src/net/: client.h  session.cpp  session.h
data-server/src/storage/: store.cpp
data-server/src/watch/: watch.h  watch_timer.cpp  watch_timer.h  watcher.h  watcher_set.cpp  watcher_set.h
data-server/test/: CMakeLists.txt
data-server/test/benchmark/net/: CMakeLists.txt  asio_bench_server.cpp  bench.h  fast_bench_server.cpp  server.conf
master-server/alarm2/: alarm.go  const.go
master-server/server/: cluster.go  cluster_test.go  debug.go  httpHandle.go  msHandle.go  range.go  server.go  table_test.go
model/pkg/kvrpcpb/: kvrpcpb.pb.go
model/pkg/metapb/: metapb.pb.go
model/pkg/mspb/: mspb.pb.go
model/pkg/statspb/: statspb.pb.go
model/proto/: kvrpcpb.proto  metapb.proto  mspb.proto
pkg-go/ds_client/: rpcClient.go
proxy/benchmark/cmd/: main.go
proxy/gateway-server/server/: proxy_concurrent.go  proxy_select.go  proxy_select_aggre.go  proxy_test.go  proxy_test_helper.go  sharkstore_api.go
proxy/store/dskv/: context.go  kv.go  range_cache.go  sqlkv.go
(+2 files in other folders)
